syntax = "proto3";

option go_package = "github.cim/alserov/device-shop/proto/gen/order";

import "protos/device.proto";
import "google/protobuf/timestamp.proto";

package order;

service Orders {
  rpc CreateOrder(CreateOrderReq) returns(CreateOrderRes);
  rpc CheckOrder(CheckOrderReq) returns(CheckOrderRes);
  rpc UpdateOrder(UpdateOrderReq) returns(UpdateOrderRes);
}

message OrderDevice {
  string DeviceUUID = 1;
  uint32 Amount = 2;
}

message CreateOrderReq {
  string UserUUID = 1;
  repeated OrderDevice Devices = 2;
}

message CreateOrderRes {
  string OrderUUID = 1;
}

message CheckOrderReq {
  string OrderUUID = 1;
}

message CheckOrderRes {
  string Status = 1;
  float Price = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  repeated device.Device Devices = 4;
}

message UpdateOrderReq {
  string Status = 1;
  string OrderUUID = 2;
}

message UpdateOrderRes {
  string Status = 1;
}